<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/action_search"
		android:title="search"
		app:showAsAction="always"
		android:icon="@android:drawable/ic_menu_search"/>
    <item
        android:id="@+id/history_menu"
        android:title="@string/transaction_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/user_profile_menu"
        android:title="@string/user_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/checkout_menu"
        android:title="@string/checkout_menu_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/crash_menu"
        android:title="@string/cause_crash"/>
</menu>
